# lesson-planner

./: .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.yaml  license  package-lock.json  pyproject.toml  run.sh  uwsgi.ini
.kube/: deployment.yaml  scc
.nginx/: nginx.conf
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: api.js  error-page.jsx  main.jsx
frontend/src/components/: AddReminderModal.jsx  Copyright.jsx  Navbar.jsx  SidePanel.jsx
frontend/src/forms/: lesson.jsx  student.jsx
frontend/src/pages/: dashboard.jsx  lesson.jsx  root.jsx  student.jsx
lesson_planner/: asgi.py  settings.py  urls.py  wsgi.py
lesson_planner/lessons/: admin.py  apps.py  models.py  serializers.py  views.py
lesson_planner/lessons/migrations/: 0001_initial.py  0002_lesson_student_lessonnote_lesson_student.py  0003_lesson_is_trial_alter_lesson_location.py  0004_semester_alter_lesson_student_and_more.py  0005_reminder.py
